--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: rgb(238, 237, 237);
+    background-color: aliceblue;
 }
 
 p{
@@ -14,14 +15,15 @@ p{
 }
 
 .banner{
-    background-color: orange;
+    background-color: rgba(255, 185, 56, 0.837);
     text-align: center;
     padding: 10px 0;
+    color: white;
 }
 
 .banner p{
-    font-weight: 500;
-    line-height: 1.4;
+    font-weight: 600;
+    line-height: 1.6;
     margin: 0;
 }
 
@@ -42,10 +44,12 @@ p{
 
 .card-div1{
     background-color: rgba(2, 4, 36, 0.916);
+    background-color: rgb(250, 226, 163);
     text-align: center;
     padding-top: 2rem;
     padding-bottom: 8rem;
     color: white;
+    color: black;
 }
 
 .card-container{
@@ -84,7 +88,6 @@ p{
 .img-div{
     width: 100%;
     height: 100%;
-    background-color: rebeccapurple;
 }
 
 
@@ -195,6 +198,10 @@ p{
 
 .resume-div1 p{
     font-weight: 600;
+    font-size: 1.5rem;
+    display: inline;
+    padding-bottom: 5px;
+    border-bottom: 1px solid black;
 }
 
 .resume-card{
@@ -255,6 +262,7 @@ p{
     text-decoration: none;  
     font-size: 14px;
     font-weight: bold;
+    color: orangered;
 }
 
 .resume-card2{
@@ -268,12 +276,11 @@ p{
 
 .jobs-container{
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 40px 80px;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 40px ;
 }
 
 .job-card{
-    /* width: 80%; */
     background-color: white;
     cursor: pointer;
 }
@@ -304,7 +311,8 @@ p{
 
 .fas{
     color: white;
-    background-color: blue;
+    /* background-color: blue; */
+    background-color: orangered;
     border-radius: 50%;
     font-size: 8px;
     padding: 5px;
@@ -329,4 +337,5 @@ p{
     text-decoration: none;
     font-size: 15px;
     font-weight: bold;
+    color: orangered;
 }
